--- a/TileMap/resource/res/gameconfig.json
+++ b/TileMap/resource/res/gameconfig.json
@@ -1,6 +1,6 @@
 {
     "tasks":[
-        {"id":"0","name":"click","status":1,"desc":"click npc_1","fromNpcId":"npc_0","toNpcId":"npc_1"}
+        {"id":"0","name":"寻找Yomi","status":1,"desc":"找到Yomi，和她进行对话","fromNpcId":"npc_0","toNpcId":"npc_1"}
     ],
     "npcs":[
         {"id":"npc_0","name":"mikoto","bitmap":"npc_0_jpg","emoji":0,"x":100,"y":200},
