--- a/TileMap/resource/res/gameconfig.json
+++ b/TileMap/resource/res/gameconfig.json
@@ -1,6 +1,6 @@
 {
     "tasks":[
-        {"id":"0","name":"寻找npc_0","status":1,"desc":"找到npc_0，进行对话","fromNpcId":"npc_0","toNpcId":"npc_1"}
+        {"id":"0","name":"找到莉兹和艾基尔","status":1,"desc":"点击莉兹接受任务，点击艾基尔完成任务","fromNpcId":"npc_0","toNpcId":"npc_1"}
     ],
     "npcs":[
         {"id":"npc_0","name":"mikoto","bitmap":"npc_0_png","emoji":0,"x":475,"y":125},
